I learned about how to create annotations from scratch for validations treatments, in field and class depth.

--- a/primeira-api/algafood-api/src/main/resources/messages.properties
+++ b/primeira-api/algafood-api/src/main/resources/messages.properties
@@ -14,11 +14,11 @@ restaurante.cozinha=Cozinha do Restaurante
 restaurante.taxaFrete=Taxa de frete do Restaurante
 NotNull.restaurante.taxaFrete={0} é obrigatória
 NotNull.restaurante.cozinha={0} é obrigatória
-
 #estado
 estado.nome=Nome do estado
 estado.id=Código do estado
-
 #cidade
 cidade.nome=Nome da cidade
 cidade.estado=Estado da cidade
+#Propriedades de Annotations customizadas
+ValorZeroIncluiDescricao={1} deve conter {2}
